--- a/Expense Tracker/Views/Transaction/AddorEdit.cshtml
+++ b/Expense Tracker/Views/Transaction/AddorEdit.cshtml
@@ -40,7 +40,7 @@
     </div>
     <div class="col-md-5">
         <div class="widget h-100 d-flex justify-content-center align-items-center" style="background-color:#212b36">
-            <i class="fa-solid fa-money-bill-transfer fa-2xl" style="background-color:#212b36"></i>
+            <i class="fa-solid fa-dollar-sign fa-2xl" style="background-color:#212b36"></i>
         </div>
     </div>
 </div>
